# Gosh

./: .boring  LICENSE  Makefile  README.md  git-mirror.sh  meson.build  meson_options.txt
demo/: main.c
demos/: demo1.c
include/gosh/: backend.h  buffer_spec.h  event.h  keyboard.h  mouse.h  util.h  window.h
include/gosh/backends/x11/: backend.h  window.h
src/: backend.c  backend.h  buffer.h  event.h  keyboard.c  keyboard.h  mouse.c  util.c  util.h  window.c  window.h
src/backends/windows/: backend.c  backend.h  keyboard.c  keyboard.h  mouse.c  mouse.h  util.c  util.h  window.c  window.h
src/backends/x11/: backend.c  backend.h  keyboard.c  keyboard.h  mouse.c  mouse.h  window.c  window.h
src/demo/: main.c
